# promptcheck

./: .gitignore  Dockerfile  PROJECT_TASKS.yaml  README.md  action.yml  entrypoint.sh  promptcheck.config.yaml.example  promptcheck_run_20250515_001552.json  promptcheck_run_20250515_001824.json  promptcheck_run_20250515_001920.json  promptcheck_run_20250515_002127.json  promptcheck_run_20250515_002317.json  promptcheck_run_20250515_002804.json  promptcheck_run_20250515_003141.json  pyproject.toml
.github/workflows/: eval.yml
docs/: quickstart.md  yaml_reference.md
evalloop/cli/: init_cmd.py  run_cmd.py
evalloop/core/: providers.py  schemas.py
example/: README.md  evalloop.config.yaml.example  promptcheck.config.yaml.example
example/.github/workflows/: evalloop_example.yml  promptcheck_example.yml
example/tests/: basic_example.yaml  failing_math.yaml  threshold_demo.yaml
scripts/: post_comment.py
src/evalloop/: README.md  __init__.py  main.py
src/evalloop/cli/: init_cmd.py  run_cmd.py
src/evalloop/core/: metrics.py  providers.py  runner.py  schemas.py
src/evalloop/utils/: file_handler.py
src/promptcheck/cli/: run_cmd.py
src/promptcheck/core/: metrics.py  runner.py  schemas.py
src/promptcheck/utils/: file_handler.py
tests/: basic_example.yaml  test_runner_basic.py
