[project]
name = "evalloop"
version = "0.1.0"
description = "EvalLoop: CI for LLM Evals"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "typer (>=0.15.4,<0.16.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "openai (>=1.78.1,<2.0.0)",
    "groq (>=0.24.0,<0.25.0)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "nltk (>=3.9.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
